--- a/src/views/partials/_header.ejs
+++ b/src/views/partials/_header.ejs
@@ -10,6 +10,6 @@
 <body>
 
     <nav class="navbar navbar-dark bg-dark">
-        <a href="/" class="navbar-brand">CRUD Game of Throne | Personajes</a>
+        <a href="/" class="navbar-brand">CRUD Game of Thrones | Personajes</a>
         <h3>GARCIA JACOBO RODRIGO ALEJANDRO | 5IV7</h3>
     </nav>
